--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(google)
 
-add_executable(google main.cpp)
+add_executable(google main.c)
 
 install(TARGETS google RUNTIME DESTINATION bin)
