Things are starting to come together, still much refactoring to do

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 project(google)
 
-add_executable(google main.c)
+cmake_minimum_required(VERSION 2.8)
+
+add_subdirectory(jansson)
+
+include_directories(build/jansson/include)
+
+add_executable(google main.c just_string.c)
+TARGET_LINK_LIBRARIES(google curl jansson)
 
 install(TARGETS google RUNTIME DESTINATION bin)
